--- a/InvoiceParser.Tests/packages.config
+++ b/InvoiceParser.Tests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="iTextSharp" version="5.5.12" targetFramework="net461" />
+  <package id="MediatR" version="3.0.1" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net461" />
   <package id="xunit" version="2.3.0" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
