--- a/InvoiceParser/InvoiceParser.csproj
+++ b/InvoiceParser/InvoiceParser.csproj
@@ -33,6 +33,12 @@
     <Reference Include="itextsharp, Version=5.5.12.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\iTextSharp.5.5.12\lib\itextsharp.dll</HintPath>
     </Reference>
+    <Reference Include="MediatR, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MediatR.3.0.1\lib\net45\MediatR.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector, Version=4.0.12.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.4.0.12\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,9 +49,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expense.cs" />
-    <Compile Include="Expenses.cs" />
-    <Compile Include="PdfParser.cs" />
+    <Compile Include="Bootstrap.cs" />
+    <Compile Include="Handlers\ExpenseNotificationHandler.cs" />
+    <Compile Include="Requests\ParseCirclekInvoiceRequest.cs" />
+    <Compile Include="Requests\ParsePdfRequest.cs" />
+    <Compile Include="Requests\ParseSkandiaStatementRequest.cs" />
+    <Compile Include="Handlers\ParseSkandiaStatementHandler.cs" />
+    <Compile Include="Models\Expense.cs" />
+    <Compile Include="Handlers\ParseCirclekInvoiceHandler.cs" />
+    <Compile Include="Handlers\ParsePdfHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
