Add Expense notification

--- a/InvoiceParser/InvoiceParser.csproj
+++ b/InvoiceParser/InvoiceParser.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Bootstrap.cs" />
     <Compile Include="Handlers\ExpenseNotificationHandler.cs" />
+    <Compile Include="Requests\ExpenseCreatedNotification.cs" />
     <Compile Include="Requests\ParseCirclekInvoiceRequest.cs" />
     <Compile Include="Requests\ParsePdfRequest.cs" />
     <Compile Include="Requests\ParseSkandiaStatementRequest.cs" />
