--- a/InvoiceParser/InvoiceParser.csproj
+++ b/InvoiceParser/InvoiceParser.csproj
@@ -38,22 +38,17 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Handlers\ExpenseNotificationHandler.cs" />
-    <Compile Include="Requests\ExpenseCreatedNotification.cs" />
-    <Compile Include="Requests\ParseCirclekInvoiceRequest.cs" />
+    <Compile Include="StatementParsers\CirclekStatementParser.cs" />
+    <Compile Include="StatementParsers\IStatementParser.cs" />
+    <Compile Include="Requests\ParseStatementRequest.cs" />
+    <Compile Include="Requests\ExpenseNotification.cs" />
     <Compile Include="Requests\ParsePdfRequest.cs" />
-    <Compile Include="Requests\ParseSkandiaStatementRequest.cs" />
-    <Compile Include="Handlers\ParseSkandiaStatementHandler.cs" />
+    <Compile Include="StatementParsers\SkandiaStatementParser.cs" />
     <Compile Include="Models\Expense.cs" />
-    <Compile Include="Handlers\ParseCirclekInvoiceHandler.cs" />
+    <Compile Include="Handlers\ParseStatementHandler.cs" />
     <Compile Include="Handlers\ParsePdfHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
