--- a/Money.Web/packages.config
+++ b/Money.Web/packages.config
@@ -11,10 +11,14 @@
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net461" />
   <package id="Nancy" version="1.4.4" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.StructureMap" version="1.4.3" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="structuremap" version="4.0.1.318" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
 </packages>
