--- a/Money.Web/Web.config
+++ b/Money.Web/Web.config
@@ -6,6 +6,7 @@
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </httpHandlers>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
