--- a/Money.Web/packages.config
+++ b/Money.Web/packages.config
@@ -17,6 +17,7 @@
   <package id="Nancy" version="1.4.4" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.StructureMap" version="1.4.3" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net461" />
+  <package id="Nancy.Owin" version="1.4.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="StructureMap" version="4.5.3" targetFramework="net461" />
