Make CircleK parser handle old and new statements

--- a/Money.Tests/Money.Tests.csproj
+++ b/Money.Tests/Money.Tests.csproj
@@ -69,7 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Tests.cs" />
+    <Compile Include="CirclekStatementParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
