--- a/Money.Parser/packages.config
+++ b/Money.Parser/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="iTextSharp" version="5.5.12" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net461" />
 </packages>
